--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://ofuzor:ofuzor2018@cluster0.qjl8f.mongodb.net/chatApp?retryWrites=true&w=majority 
+MONGO_URI = mongodb+srv://ofuzor:ofuzor2018@cluster0.qjl8f.mongodb.net/chathive?retryWrites=true&w=majority 
 
 PORT = 5000
 
